--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 python-mpd2==0.5.1
-toml==0.7.0
+git+git://github.com/uiri/toml.git
 git+git://github.com/quick2wire/quick2wire-python-api.git@0.0.0.2
