--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 python-mpd2==0.5.1
-git+git://github.com/uiri/toml.git
+-e git://github.com/uiri/toml.git#egg=toml
 git+git://github.com/quick2wire/quick2wire-python-api.git@0.0.0.2
